--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -42,13 +42,11 @@
                       </ul>
                     </li>
                     <li class="col-sm-3">
+                      <ul class="list-inline">
+                        <li class="dropdown-header">Genres</li><br>
+                        {{ render(controller('PortalBundle:Base:genres')) }}
+                      </ul>
                       <ul>
-                        <li class="dropdown-header">Genres</li>
-                        <li><a href="#">Crime</a></li>
-                        <li><a href="#">Fantasy</a></li>
-                        <li><a href="#">Mistery</a></li>
-                        <li><a href="#">Art</a></li>
-                        <li><a href="#">Biography</a></li>
                         <li class="divider"></li>
                         <li class="dropdown-header">Reccomendations</li>
                         <li><a href="#">Reccomended</a></li>
@@ -87,7 +85,15 @@
                   </ul>
                 </li>
               </ul>             
-              <ul class="nav navbar-nav navbar-right">                
+              <ul class="nav navbar-nav navbar-right"> 
+              {% if is_granted('ROLE_ADMIN') %}
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Admin Options <span class="caret"></span></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="{{path('book_new')}}">Add new book</a></li>
+                  </ul>
+                </li>                 
+              {% endif %}               
               {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}              
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Options <span class="caret"></span></a>
