--- a/app/Resources/views/book/new.html.twig
+++ b/app/Resources/views/book/new.html.twig
@@ -1,13 +1,18 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Book creation</h1>
+  <div class="row">
+  	<div class="col-md-3"></div>
+    <div class="col-md-6">	
+	    <h1>New Book</h1>
 
-    {{ form_start(form) }}
-        {{ form_widget(form) }}
-        <input type="submit" value="Create" class="btn btn-default" />
-    {{ form_end(form) }}
+	    {{ form_start(form) }}
+	        {{ form_widget(form) }}
+	        <input type="submit" value="Create" class="btn btn-default" />
+	    {{ form_end(form) }}
 
-    <a href="{{ path('book_index') }}" class="btn btn-default">Back to the list</a>
-
+	    <a href="{{ path('book_index') }}" class="btn btn-default">Back to the list</a>
+		</div>
+		<div class="col-md-3"></div>
+	</div>
 {% endblock %}
