--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -91,6 +91,7 @@
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Admin Options <span class="caret"></span></a>
                   <ul class="dropdown-menu">
                     <li><a href="{{path('book_new')}}">Add new book</a></li>
+                    <li><a href="{{path('genre_new')}}">Add new genre</a></li>
                   </ul>
                 </li>                 
               {% endif %}               
