--- a/app/Resources/views/book/index.html.twig
+++ b/app/Resources/views/book/index.html.twig
@@ -1,18 +1,21 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+
     <h1>Recently added books</h1>
+
     {% for book in books %}
+
         <div class="pull-left">
-          {% if vich_uploader_asset(book, 'coverImage') is not null %}
-            <img src="{{ vich_uploader_asset(book, 'coverImage') | imagine_filter('s_thumb') }}" alt="{{ book.title }}" class="img-thumbnail" />
+          {% if vich_uploader_asset(book, 'coverImage', 'PortalBundle\\Entity\\Book') is not null %}
+            <img src="{{ vich_uploader_asset(book, 'coverImage', 'PortalBundle\\Entity\\Book') | imagine_filter('s_thumb') }}" alt="{{ book.title }}" class="img-thumbnail" />
           {% endif %}
         </div>     
         <h2><a href="{{ path('book_show', { 'id': book.id }) }}">{{ book.title }}</a></h2>
-        <h3><a href="{{ path('author_show', { 'id': book.author.id }) }}">{{ book.author.name }}</a></h3>
+        <h3><a href="{{ path('author_show', { 'id': book.authorId }) }}">{{ book.authorName }}</a></h3>
         {% if book.publishDate %}<p>Publish Date: {{ book.publishDate|date('Y') }}</p>{% endif %}
-        {% if book.translator %}<p>Translator: {{ book.translator.name }}</p>{% endif %}    
-        {% if book.publisher %}<p>Publisher: {{ book.publisher.name }}</p>{% endif %}
+        {% if book.translatorName %}<p>Translator: {{ book.translatorName }}</p>{% endif %}    
+        {% if book.publisherName %}<p>Publisher: {{ book.publisherName }}</p>{% endif %}
         <p>{{ book.description }}</p>
         <select class="showRating">
           <option value="1">1</option>
@@ -26,16 +29,9 @@
           <option value="9">9</option>
           <option value="10">10</option>  
         </select>
-
-        {% set sumratings = 0 %}
-        {% for rating in book.ratings %}
-            {% set sumratings = sumratings + rating.rate %}
-        {% endfor %}
         
-        {% if book.ratings|length > 0 %}
-          <span>{{ (sumratings / book.ratings|length)|round(2) }}</span>
-           ({{book.ratings|length}} votes, {{ book.reviews|length }} reviews)
-       {% endif %}
+        <span>{{ book.avgRating|round(2) }}</span>
+         ({{ book.ratingsCount }} votes, {{ book.reviewsCount }} reviews)
         
         <div class="clearfix"></div>
         <hr>            
