--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -68,7 +68,7 @@
                     <li class="col-sm-3">
                       <ul>
                         <li class="dropdown-header">Top 100</li>
-                        <li><a href="#">Top rated</a></li>
+                        <li><a href="{{path('book_top')}}">Top rated</a></li>
                         <li><a href="#">Most popular</a></li>
                         <li><a href="#">Most discussed</a></li>
                         <li class="divider"></li>
