--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -67,9 +67,9 @@
                     </li>
                     <li class="col-sm-3">
                       <ul>
-                        <li class="dropdown-header">Top 100</li>
+                        <li class="dropdown-header">Top books</li>
                         <li><a href="{{path('book_top')}}">Top rated</a></li>
-                        <li><a href="#">Most popular</a></li>
+                        <li><a href="{{path('book_popular')}}">Most popular</a></li>
                         <li><a href="#">Most discussed</a></li>
                         <li class="divider"></li>
                         <li class="dropdown-header">Newsletter</li>
