--- a/app/Resources/views/genre/show.html.twig
+++ b/app/Resources/views/genre/show.html.twig
@@ -3,22 +3,44 @@
 {% block body %}
     <h2>New {{ genre.name }} books</h2>
     <div class="row">
-        {% for book in genre.books %}
+        {% for book in recentBooks %}
+        {% if loop.index is divisible by(7) %}
+            </div>
+            <div class="row">
+        {% endif %}
+            <div class="col-md-2">               
+                {% if vich_uploader_asset(book, 'coverImage', 'PortalBundle\\Entity\\Book') is not null %}
+                    <img src="{{ vich_uploader_asset(book, 'coverImage', 'PortalBundle\\Entity\\Book') | imagine_filter('s_thumb') }}" alt="{{ book.title }}" class="img-thumbnail" />
+                    <br>
+                {% endif %} 
+                <small><b><a href="{{ path('book_show', { 'id': book.id }) }}">{{ book.title }}</a></b></small>
+                <br>
+                <small><a href="{{ path('author_show', { 'id': book.authorId }) }}">{{ book.authorName }}</a></small>
+                <br>
+                <small>{{ book.addDate | date('Y-m-d') }}</small>   
+            </div>
+        {% endfor %}
+    </div>
+    <h2>Top rated {{ genre.name }} books</h2>
+    <div class="row">
+        {% for book in topBooks %}
         {% if loop.index is divisible by(7) %}
             </div>
             <div class="row">
         {% endif %}
             <div class="col-md-2">
-                <div class="pull-left">
-                  {% if vich_uploader_asset(book, 'coverImage') is not null %}
-                    <img src="{{ vich_uploader_asset(book, 'coverImage') | imagine_filter('s_thumb') }}" alt="{{ book.title }}" class="img-thumbnail" /><br>
-                  {% endif %}  
-                <small><b><a href="{{ path('book_show', { 'id': book.id }) }}">{{ book.title }}</a></b></small><br>
-                <small><a href="{{ path('author_show', { 'id': book.author.id }) }}">{{ book.author.name }}</a></small>
-                </div>
+                <p><span class="badge">{{ book.rating | round(2) }}</span></p>            
+                {% if vich_uploader_asset(book, 'coverImage', 'PortalBundle\\Entity\\Book') is not null %}
+                    <img src="{{ vich_uploader_asset(book, 'coverImage', 'PortalBundle\\Entity\\Book') | imagine_filter('s_thumb') }}" alt="{{ book.title }}" class="img-thumbnail" />
+                    <br>
+                {% endif %} 
+                <small><b><a href="{{ path('book_show', { 'id': book.id }) }}">{{ book.title }}</a></b></small>
+                <br>
+                <small><a href="{{ path('author_show', { 'id': book.authorId }) }}">{{ book.authorName }}</a></small>                 
             </div>
         {% endfor %}
-    </div>
+    </div>    
+    <h2>Most popular {{ genre.name }} books</h2>
 
 {#     <a href="{{ path('author_edit', { 'id': author.id }) }}" class="btn btn-default">Edit</a>
 
