--- a/src/PortalBundle/Resources/public/css/style.css
+++ b/src/PortalBundle/Resources/public/css/style.css
@@ -1,3 +1,8 @@
+.badge {
+  color: #fff;
+  background-color: #428bca;
+}
+
 .navbar > .container .navbar-brand, 
 .navbar > .container-fluid .navbar-brand {
   font-weight: bold;
