Najpopularniejsze książki z danego gatunku

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -67,10 +67,10 @@
                     </li>
                     <li class="col-sm-3">
                       <ul>
-                        <li class="dropdown-header">Top books</li>
+                        <li class="dropdown-header">Books</li>
+                        <li><a href="{{path('book_index')}}">Recent</a></li>                        
                         <li><a href="{{path('book_top')}}">Top rated</a></li>
                         <li><a href="{{path('book_popular')}}">Most popular</a></li>
-                        <li><a href="#">Most discussed</a></li>
                         <li class="divider"></li>
                         <li class="dropdown-header">Newsletter</li>
                         <form class="form" role="form">
