--- a/app/Resources/views/book/popular.html.twig
+++ b/app/Resources/views/book/popular.html.twig
@@ -9,6 +9,8 @@
         <div class="pull-left">
           {% if vich_uploader_asset(book, 'coverImage', 'PortalBundle\\Entity\\Book') is not null %}
             <img src="{{ vich_uploader_asset(book, 'coverImage', 'PortalBundle\\Entity\\Book') | imagine_filter('s_thumb') }}" alt="{{ book.title }}" class="img-thumbnail" />
+          {% else %}
+            <img src="http://placehold.it/110x157?text=No image" class="img-thumbnail pull-left">
           {% endif %}
         </div>     
         <h2><a href="{{ path('book_show', { 'id': book.id }) }}">{{ book.title }}</a></h2>
